Switching jade -> pug & updating history page

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "dependencies": {
     "gulp": "3.9.x",
+    "gulp-pug": "1.2.x",
     "gulp-sass": "2.1.x",
-    "gulp-jade": "1.1.x"
+    "pug": "^2.0.0-alpha3"
   }
 }
