--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
     "gulp-sass": "2.1.x",
     "gulp-scss-lint": "^0.4.0",
     "gulp-sourcemaps": "^1.6.0",
-    "pug": "^2.0.0-alpha3"
+    "pug": "^2.0.0-rc.3"
   }
 }
