--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 .sass-cache/
 node_modules/
-includes/_ips.pug
-ips.txt
 dist/
 js/day.js
 js/month.js
 js/hour.js
 js/updated.js
+js/total.js
+mirrorband.sqlite
